--- a/MyMario/myStyles/character.css
+++ b/MyMario/myStyles/character.css
@@ -1,33 +1,4 @@
-.navbar-text>a{
-    color: inherit;
-    text-decoration: none;
-}
-
-body{
-    padding-top: 70px;
-    padding-bottom: 100px;
-}
-
-#page-content{
-	margin-bottom: 100px;
-}
-
-.btn-danger{
-	margin-bottom: 15px;
-}
-
-footer p{
-	font-size: 0.7em;
-}
-
-.modal-footer p{
-	color: #FFFFFF;
-}
-
-textarea {
-    resize: none;
-}
-
+/*characters*/
 .vcenter {
     margin-top: 20%;
 }
@@ -35,7 +6,7 @@ textarea {
 	padding-bottom: 50px;
 }
 
-
+/*character*/
 #mario{
 	background-color: red;
 	color: #FFFFFF;
@@ -72,5 +43,3 @@ textarea {
 	background-color: violet;
 	color: #FFFFFF;
 }
-
-
