--- a/MyMario/myStyles/history.css
+++ b/MyMario/myStyles/history.css
@@ -1,4 +1,13 @@
+body{
+    padding-top: 20%;
+}
 
+
+
+.timeline-wrapper{
+    padding-bottom: 10%;
+    background-color: grey;
+}
 
 .timeline {
     list-style: none;
@@ -148,7 +157,7 @@
         margin-top: 5px;
     }
 
-@media (max-width: 767px) {
+@media (max-width: 760px) {
     ul.timeline:before {
         left: 40px;
     }
@@ -182,4 +191,21 @@
         left: -14px;
         right: auto;
     }
+}
+
+
+
+@media only screen and (max-device-width: 459px) {
+	body{
+		padding-bottom: 50%;
+	}
+	
+}
+
+@media only screen and (min-device-width: 767px)  {
+	body{
+		padding-top: 10%;
+		padding-bottom: 10%
+	}
+	
 }
