--- a/MyMario/myStyles/character.css
+++ b/MyMario/myStyles/character.css
@@ -5,6 +5,16 @@ body{
 	padding-bottom: 20%;
 	background-color: grey;
 }
+
+footer p{
+	font-size: 0.7em;
+}
+
+.navbar-text>a{
+    color: inherit;
+    text-decoration: none;
+}
+
 .vcenter {
     margin-top: 20%;
 }
