--- a/MyMario/myStyles/character.css
+++ b/MyMario/myStyles/character.css
@@ -2,7 +2,7 @@
 body{
 	
 	padding-top: 20%;
-	padding-bottom: 20%;
+
 	background-color: grey;
 }
 
@@ -15,11 +15,15 @@ footer p{
     text-decoration: none;
 }
 
+.navbar{
+	margin-bottom: 0;
+}
+
 .vcenter {
     margin-top: 20%;
 }
 .char-wrapper{
-	padding-bottom: 20%;
+	padding-bottom: 5%;
 }
 
 /*character*/
@@ -63,9 +67,7 @@ footer p{
 
 
 @media only screen and (max-device-width: 459px) {
-	body{
-		padding-bottom: 50%;
-	}
+
 	.vcenter{
 		margin-top: 10px;
 	}
@@ -74,7 +76,7 @@ footer p{
 @media only screen and (min-device-width: 767px)  {
 	body{
 		padding-top: 10%;
-		padding-bottom: 10%
+		
 	}
 	.vcenter{
 		margin-top: 15px;
