--- a/MyMario/myStyles/style.css
+++ b/MyMario/myStyles/style.css
@@ -3,9 +3,13 @@
     text-decoration: none;
 }
 
+.navbar{
+	margin-bottom: 0;
+}
+
 body{
     padding-top: 20%;
-    padding-bottom: 15%;
+  
     background-color: grey;
 }
 
@@ -32,7 +36,7 @@ textarea {
 @media only screen and (min-device-width: 767px)  {
 	body{
 		padding-top: 10%;
-		padding-bottom: 10%
+	
 	}
 	
 }
