--- a/MyMario/myStyles/character.css
+++ b/MyMario/myStyles/character.css
@@ -1,22 +1,8 @@
 /*characters*/
 body{
-	
 	padding-top: 20%;
 
 	background-color: grey;
-}
-
-footer p{
-	font-size: 0.7em;
-}
-
-.navbar-text>a{
-    color: inherit;
-    text-decoration: none;
-}
-
-.navbar{
-	margin-bottom: 0;
 }
 
 .vcenter {
@@ -49,7 +35,7 @@ footer p{
 }
 #bowser{
 	background-color: gold;
-	color: #FFFFFF;
+	color: #5F5F5F;
 }
 #yoshi{
 	background-color: green;
@@ -57,7 +43,7 @@ footer p{
 }
 #wario{
 	background-color: yellow;
-	color: #FFFFFF;
+	color: #5F5F5F;
 }
 #waluigi{
 	background-color: violet;
@@ -86,7 +72,7 @@ footer p{
 @media only screen and (min-device-width: 992px)  {
 
 	.vcenter{
-		margin-top: 20%;
+		margin-top: 10%;
 		
 	}
 	
