--- a/MyMario/myStyles/landing.css
+++ b/MyMario/myStyles/landing.css
@@ -1,78 +1,44 @@
 *{
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
-body, html{
-    width: 1000px;
-    height: 500px;
+html, body {
+	height: 100%;
+	width: 100%;
 }
 
-body{
-    background-color: #111;
-    
+.bg {	
+	height: 100%;
+	background-image: url("../images/landing/mario.gif"), url("../images/landing/coin.gif") , url("../images/landing/ground.png"), url("../images/landing/bushes.png"), url("../images/landing/background2_1.png");
+	background-color: #006df0;
+	background-repeat: no-repeat, no-repeat, repeat-x, repeat-x, repeat-x;
+	background-position: left 30% bottom 24px, left 60% bottom 30px, left 0px bottom 0px, left 0px bottom 24px, left 0px bottom 0px;
+	-webkit-animation: back 15s infinite linear;
 }
 
-.wrapper{
-    width: 1000px;
-    height: 500px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #aaa;
+@-webkit-keyframes back {
+  0% {
+  	background-position: left 30% bottom 24px, left 60% bottom 30px, left 0px bottom 0px, left 0px bottom 24px, left 0px bottom 0px;
+  }
+  50% {
+    background-position: left 50% bottom 24px, left 60% bottom 30px, left -816px bottom 0px, left -508px bottom 24px, left -256px bottom 0px;
+  }
+  100% {
+    background-position: left 30% bottom 24px, left 60% bottom 30px, left -1632px bottom 0px, left -1016px bottom 24px, left -512px bottom 0px;
+  }
 }
 
-.cont{
-    width: 100%;
-    height: 100%;
-    position: relative;
+
+#landing {
+	padding-top: 20%;
 }
 
-.part-01{
-    width: 100px;
-    height: 240px;
-    position: absolute;
-    top: 150px;
-    left: 900px;
-    background: url(../images/landing.jpeg);
-    background-size: cover;
-    background-position: -900px -150px;
-    box-shadow: 1px 1px 10px 5px #000;
+#landing p{
+	font-size: 1.3em;
+	padding-top: 1.2em;
+	padding-bottom: 1.2em;
 }
 
-.part-02{
-    width: 730px;
-    height: 340px;
-    position: absolute;
-    top: 80px;
-    left: 170px;
-    background: url(../images/landing.jpeg);
-    background-size: cover;
-    background-position: -170px -80px;
-    box-shadow: 1px 1px 10px 5px #000;
-}
 
-.part-03{
-    width: 320px;
-    height: 480px;
-    position: absolute;
-    top: 10px;
-    left: 400px;
-    background: url(../images/landing.jpeg);
-    background-size: cover;
-    background-position: -400px -10px;
-    box-shadow: 1px 1px 10px 5px #000;
-}
 
-.part-04{
-    width: 220px;
-    height: 200px;
-    position: absolute;
-    top: 170px;
-    left: 0px;
-    background: url(../images/landing.jpeg);
-    background-size: cover;
-    background-position: 0px -170px;
-    box-shadow: 1px 1px 10px 5px #000;
-}
