--- a/MyMario/myStyles/generic.css
+++ b/MyMario/myStyles/generic.css
@@ -1,17 +1,55 @@
 .navbar-text>a{
     color: inherit;
     text-decoration: none;
+
 }
 
 .navbar{
 	margin-bottom: 0;
 }
+
+
+.navbar-nav>li.active{
+	border-bottom: 2px solid red;
+
+}
+.navbar-default .navbar-nav>li>a{
+	font-size: 1.1em;
+	color: #bdf4fd;
+}
+
+
+.navbar-default .navbar-nav>li>a:hover{
+	color: #98e3f0;
+}
+
+
+.navbar-default{
+	background-color: #f25157;
+	padding-top: 1.5em;
+	border: 0;
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>.active>a:hover{
+	font-weight: bold;
+	background-color: transparent;
+	color: #98e3f0;
+	transition: all 1s ease;
+}
+
+
+
 footer p{
 	font-size: 0.7em;
 }
+footer.navbar{
+	border-radius: 0;
+}
 
 .modal-footer p{
-	color: #FFFFFF;
+	color: #DDD;
 }
 textarea {
     resize: none;
