--- a/MyMario/myStyles/landing.css
+++ b/MyMario/myStyles/landing.css
@@ -31,14 +31,76 @@ html, body {
 
 
 #landing {
-	padding-top: 20%;
+	padding-top: 25%;
 }
+
 
 #landing p{
 	font-size: 1.3em;
-	padding-top: 1.2em;
+	padding-top: 100px;;
 	padding-bottom: 1.2em;
 }
+
+.btn{
+	padding: 10px 35px; 
+}
+
+
+h1{
+	margin:0;
+	padding: 0;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+
+}
+
+h1 span{
+	
+	color: #ccc;
+	background: #F00;
+	padding: 10px 20px;
+	display: table-cell;
+	box-shadow: inset 0 0 5px rgba(0,0,0, 0.3), 0 5px 0 #c00;
+	animation: animate 0.5s infinite;
+}
+
+@keyframes animate{
+	0%{
+		transform: translateY(0px);
+		box-shadow: inset 0 0 5px rgba(0,0,0, 0.3), 0 5px 0 #c00, 0 15px 5px rgba(0,0,0,0.0);
+	}
+	50%{
+		transform: translateY(-20px);
+		box-shadow: inset 0 0 5px rgba(0,0,0, 0.3), 0 5px 0 #c00, 0 15px 5px rgba(0,0,0,0.6);
+	}
+	100%{
+		transform: translateY(0px);
+		box-shadow: inset 0 0 5px rgba(0,0,0, 0.3), 0 5px 0 #c00, 0 15px 5px rgba(0,0,0,0.0);
+	}
+}
+
+h1 span:nth-child(1){
+	animation-delay: 0.2s;
+}
+
+h1 span:nth-child(2){
+	animation-delay: 0.4s;
+}
+
+h1 span:nth-child(3){
+	animation-delay: 0.6s;
+}
+
+h1 span:nth-child(4){
+	animation-delay: 0.8s;
+}
+
+h1 span:nth-child(5){
+	animation-delay: 1s;
+}
+
+
 
 
 
