--- a/MyMario/myStyles/history.css
+++ b/MyMario/myStyles/history.css
@@ -91,7 +91,7 @@ body{
 	top: 16px;
 	left: 50%;
 	margin-left: -25px;
-	background-color: #999999;
+	background-color: #d9534f;
 	z-index: 100;
 	border-top-right-radius: 50%;
 	border-top-left-radius: 50%;
@@ -117,25 +117,11 @@ body{
     right: auto;
 }
 
-.timeline-badge.primary {
-    background-color: #2e6da4 !important;
-}
-
-.timeline-badge.success {
-    background-color: #3f903f !important;
-}
-
 .timeline-badge.warning {
     background-color: #f0ad4e !important;
 }
 
-.timeline-badge.danger {
-    background-color: #d9534f !important;
-}
 
-.timeline-badge.info {
-    background-color: #5bc0de !important;
-}
 
 .timeline-title {
     margin-top: 0;
