--- a/MyMario/myStyles/landing.css
+++ b/MyMario/myStyles/landing.css
@@ -8,6 +8,8 @@ html, body {
 	width: 100%;
 }
 
+/*made a multilayer background*/
+
 .bg {	
 	height: 100%;
 	background-image: url("../images/landing/mario.gif"), url("../images/landing/coin.gif") , url("../images/landing/ground.png"), url("../images/landing/bushes.png"), url("../images/landing/background2_1.png");
@@ -29,7 +31,7 @@ html, body {
   }
 }
 
-
+/*positioned th title to center in the background*/
 #landing {
 	padding-top: 25%;
 }
@@ -51,7 +53,7 @@ h1{
 	padding: 0;
 	position: absolute;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
 
 }
 
@@ -62,34 +64,58 @@ h1 span{
 	padding: 10px 20px;
 	display: table-cell;
 	box-shadow: inset 0 0 5px rgba(0,0,0, 0.3), 0 5px 0 #c00;
-	animation: animate 0.5s infinite;
+	-webkit-animation: animate 0.5s infinite;
 }
 
-@keyframes animate{
+p{
+	color: #FFF;
+	font-size: 1.3em;
+}
+
+/*start button desing*/
+
+.btn-default{
+	
+	border: 1px solid #FFF;
+	padding: 5px 15px;
+	border-radius: 10px;
+	background-color: transparent;
+	color: #FFF;
+}
+
+.btn-default:hover{
+	background-color: #c00;
+	color: #FFF;
+}
+
+/*animation of mario, background and coins*/
+
+@-webkit-keyframes animate{
 	0%{
-		transform: translateY(0px);
+		-webkit-transform: translateY(0px);
 		box-shadow: inset 0 0 5px rgba(0,0,0, 0.3), 0 5px 0 #c00, 0 15px 5px rgba(0,0,0,0.0);
 	}
 	50%{
-		transform: translateY(-20px);
+		-webkit-transform: translateY(-20px);
 		box-shadow: inset 0 0 5px rgba(0,0,0, 0.3), 0 5px 0 #c00, 0 15px 5px rgba(0,0,0,0.6);
 	}
 	100%{
-		transform: translateY(0px);
+		-webkit-transform: translateY(0px);
 		box-shadow: inset 0 0 5px rgba(0,0,0, 0.3), 0 5px 0 #c00, 0 15px 5px rgba(0,0,0,0.0);
 	}
 }
 
+/*allocate specific delay for each child in the h1*/
 h1 span:nth-child(1){
-	animation-delay: 0.2s;
+	-webkit-animation-delay: 0.2s;
 }
 
 h1 span:nth-child(2){
-	animation-delay: 0.4s;
+	-webkit-animation-delay: 0.4s;
 }
 
 h1 span:nth-child(3){
-	animation-delay: 0.6s;
+	-webkit-animation-delay: 0.6s;
 }
 
 h1 span:nth-child(4){
@@ -97,7 +123,7 @@ h1 span:nth-child(4){
 }
 
 h1 span:nth-child(5){
-	animation-delay: 1s;
+	-webkit-animation-delay: 1.2s;
 }
 
 
