--- a/MyMario/myStyles/landing.css
+++ b/MyMario/myStyles/landing.css
@@ -76,7 +76,7 @@ h1 span{
 	color: #ccc;
 	background: #F00;
 	padding: 10px 20px;
-	display: inline-block;
+	display: table-cell;
 	box-shadow: inset 0 0 5px rgba(0,0,0, 0.3), 0 5px 0 #c00;
 	-webkit-animation: animate 0.5s infinite;
 	animation: animate 0.5s infinite;
